attempted to fix the horizontal scroll

--- a/_sass/3-layout/containers.sass
+++ b/_sass/3-layout/containers.sass
@@ -3,8 +3,8 @@ html, body
   // background-color: #FAFAFA
 
 #wrapper
-  max-width: 1200px
-
+  max-width: 100%
+  overflow-x: hidden
 
 // Containers Media Queries
 @media screen and (max-width: 800px)
