--- a/_sass/3-layout/title.sass
+++ b/_sass/3-layout/title.sass
@@ -11,13 +11,14 @@
 
 .rw-sentence
   text-align: center
-  // span
-  //   white-space: nowrap
+  span
+    white-space: nowrap
 
 .rw-words
   display: inline
+  //this is causing the 2x right scroll issue
   text-align: left
-  text-indent: 0.1em
+  text-indent: 0.3em
   span
     position: absolute
     opacity: 0
@@ -67,7 +68,6 @@
 //
 //   100%
 //     opacity: 0
-
 
 @keyframes rotateWordsFirst
   0%
